...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Кнопка меню -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/menuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:backgroundTint="@android:color/transparent"
            android:background="@android:color/transparent"
            app:icon="@drawable/ic_menu"
...
